# AoC24

./: .envrc  .gitignore  AoC24.cabal  README.md  default.nix  justfile  shell.nix
app/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day19.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs
nix/: sources.json
src/: AoC.hs
src/AoC/: AStar.hs  List.hs  Monad.hs
