cabal-version:   3.4
name:            AoC24
version:         1.0.0
synopsis:        Solutions for Advent of Code 2024 in Haskell

-- description:
homepage:        https://github.com/abhin4v/AoC24
license:         Apache-2.0
license-file:    LICENSE
author:          Abhinav Sarkar
maintainer:      abhinav@abhinavsarkar.net

-- copyright:
build-type:      Simple
extra-doc-files: CHANGELOG.md

common common-config
  build-depends:
    , base        >=4.18 && <4.22
    , text        ^>=2   || ^>=2.1
    , utility-ht

  default-language:   GHC2021
  default-extensions:
    DerivingStrategies
    LambdaCase
    OverloadedStrings
    RecordWildCards

  ghc-options:
    -Weverything -Wno-all-missed-specialisations -Wno-deriving-typeable
    -Wno-implicit-prelude -Wno-incomplete-uni-patterns
    -Wno-missed-specialisations -Wno-missing-deriving-strategies
    -Wno-missing-export-lists -Wno-missing-exported-signatures
    -Wno-missing-home-modules -Wno-missing-import-lists
    -Wno-missing-local-signatures -Wno-missing-safe-haskell-mode
    -Wno-monomorphism-restriction -Wno-name-shadowing
    -Wno-prepositive-qualified-module -Wno-safe -Wno-type-defaults
    -Wno-unsafe -Wno-unused-packages -Wno-missing-kind-signatures -pgml
    g++

  if os(osx)
    ghc-options: -pgml clang++

common common-exe-config
  import:         common-config
  build-depends:  AoC24
  hs-source-dirs: app
  ghc-options:    -funbox-strict-fields

  if os(linux)
    ghc-options: -optl=-no-pie

library
  import:          common-config
  build-depends:   time
  exposed-modules: AoC
  hs-source-dirs:  src

executable Day1
  import:  common-exe-config
  main-is: Day1.hs

executable Day2
  import:  common-exe-config
  main-is: Day2.hs
